# agentdeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  providers.md
src/: agent.rs  app.rs  config.rs  keymap.rs  main.rs  state.rs  ui.rs  usage.rs
src/snapshots/: draw_main_add_modal_empty.snap  draw_main_add_modal_populated.snap  draw_main_help_modal.snap  draw_main_scroll_indicator.snap
